# RAG

Piney/: .gitignore  embeddings.py  main.py  pinecone_setup.py  pinecone_utils.py  pyproject.toml  requirements.txt
Piney/data/data/: sample_data.json
Piney/piney_env/: pyvenv.cfg
