[project]
name = "pinecone"
version = "0.1.0"
description = ""
authors = [
    {name = "gunnarguy", email = "gunnarguy@me.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

packages = [{include = "pinecone"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "piney" }
]